Created Form1 and 34220259-86b7-4e10-90a9-87551de10bee.jpg; Edited settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,8 +1,10 @@
 unique_ids:
   assets:
+    34220259-86b7-4e10-90a9-87551de10bee.jpg: '1759619521534940222240126.8479'
     standard-page.html: TGMHQASEFEHAZIVX6LMFHVU5AXQPIN6U
     theme.css: W536QBARVSAOBKC4TQ5DVPWVWPBGFXHA
-  forms: {}
+  forms:
+    Form1: '175961947648548939701565.626656'
   modules: {}
   scripts: {}
   server_modules: {}
