--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,9 +1,14 @@
 allow_embedding: false
-name: Custom HTML 1
-package_name: Custom_HTML_1
+metadata: {description: Sistema de agendamento, logo_img: 'asset:34220259-86b7-4e10-90a9-87551de10bee.jpg', title: Dr. Amanda Rocha}
+name: Amanda Rocha
+package_name: Amanda_Rocha
 runtime_options:
   client_version: '3'
   server_spec: {base: python310-minimal}
   server_version: python3-sandbox
   version: 2
-services: []
+services:
+- client_config: {}
+  server_config: {}
+  source: /runtime/services/tables.yml
+startup_form: Form1
