--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -3,11 +3,18 @@ components:
   name: content_panel
   properties: {}
   type: ColumnPanel
-- components:
-  - layout_properties: {grid_position: 'VFYCBA,JUIJES'}
-    name: label_1
-    properties: {bold: true, font: times new roman, font_size: 18, icon: 'fa:calendar', visible: true}
-    type: Label
+- layout_properties: {slot: default}
+  name: label_1
+  properties:
+    bold: true
+    font: times new roman
+    font_size: 18
+    icon: fa:calendar
+    text: |2+
+
+    visible: true
+  type: Label
+- components: []
   layout_properties: {slot: default}
   name: column_panel_1
   properties: {}
