Created ServerModule1; Edited Form1

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -7,4 +7,5 @@ unique_ids:
     Form1: '175961947648548939701565.626656'
   modules: {}
   scripts: {}
-  server_modules: {}
+  server_modules:
+    ServerModule1: '1759940421996616623699508.9833'
